[package]
name = "windy-pws"
version = "0.1.0"
authors = ["Id405 <8o7wermobile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
derive_builder = "0.10.2"
reqwest = { version = "0.11.3", features = ["blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
snafu = "0.6.10"
